<resources>
    <string name="app_name">TwitchFlix</string>
    <string name="watch_text">WATCH</string>
    <string name="stream_text">STREAM</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="start_button">Start stream</string>
    <string name="stop_button">Stop stream</string>
    <string name="switch_camera_button">Switch camera</string>
    <string name="select_file">Select file</string>
    <string name="start_record">Start record</string>
    <string name="stop_record">Stop record</string>
    <string name="hint_rtmp">rtmp://yourendpoint</string>
    <string name="track_selection_title">Select Track</string>
    <string name="buffering_string">Buffering&#8230;</string>
    <string name="accountsettings">AccountSettings</string>
    <string name="start">START</string>
    <string name="stream_title">Stream Title</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="login_required">Login Required</string>
    <string name="emailcolon">Email:</string>
    <string name="password_colon">Password:</string>
    <string name="name">Name:</string>
    <string name="log_out">Log Out</string>
    <string name="remove_user">Remove User</string>
</resources>
